--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "type": "app",
   "version": "2.0.0",
-  "name": "Multiview Object Matching",
-  "description": "Multiview labeling toolbox application for object matching",
+  "name": "Multiview Bbox Matching",
+  "description": "Propagate bboxes to multiview images group",
   "docker_image": "supervisely/base-py-sdk:6.72.214",
   "categories": [
     "images",
