--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "name": "Multiview Bbox Matching",
   "description": "Propagate bboxes to multiview images group",
-  "docker_image": "supervisely/base-py-sdk:6.72.214",
+  "docker_image": "supervisely/multiview-object-matching:0.0.1",
   "categories": [
     "images",
     "labelling"
