config update name

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "type": "app",
   "version": "2.0.0",
-  "name": "Multiview Bbox Matching",
+  "name": "Multiview Object Matching",
   "description": "Propagate bboxes to multiview images group",
   "docker_image": "supervisely/multiview-object-matching:0.0.1",
   "instance_version": "6.12.5",
