--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   "instance_version": "6.12.5",
   "categories": [
     "images",
-    "labelling"
+    "labeling"
   ],
   "icon": "https://github.com/user-attachments/assets/abee5aa3-76ca-4abf-87b9-35f45f978d06",
   "icon_cover": true,
